crates/tesshir/tests/fixtures/check/non_exhaustive_enum_match.golden
Error: check/non_exhaustive_enum_match.tess:7:5: match is not exhaustive: missing `None`
