crates/tesshir/tests/fixtures/check/non_exhaustive_enum_match.tess
enum Option<T> {
    None,
    Some(T),
}

fn only_some(x: Option<i32>) -> i32 {
    match x {
        Option::Some(n) => n,
    }
}
